[gd_scene load_steps=22 format=3 uid="uid://c5cxsqwbtmoxx"]

[ext_resource type="PackedScene" uid="uid://ccfhkly2tsur7" path="res://elements/player/player.tscn" id="1_bjlvv"]
[ext_resource type="Script" uid="uid://beului1cuskkp" path="res://elements/player/player_sing.gd" id="2_ogifs"]
[ext_resource type="Texture2D" uid="uid://dmrcaug7tfp7g" path="res://assets/character/sing.png" id="3_qsl30"]
[ext_resource type="Texture2D" uid="uid://b75mfh5nlbp5b" path="res://assets/character/sing_idle.png" id="4_rj4jd"]
[ext_resource type="Texture2D" uid="uid://lgbv4tdxgk1c" path="res://assets/character/sing_atk.png" id="5_3j47b"]
[ext_resource type="Texture2D" uid="uid://msovp1timoy7" path="res://assets/light/light2.png" id="6_ou28q"]
[ext_resource type="Texture2D" uid="uid://cmlq5dyky2le1" path="res://assets/ui/fail1.png" id="7_1rixm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ou28q"]
size = Vector2(38, 20)

[sub_resource type="Animation" id="Animation_3j47b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -119)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_qsl30")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ou28q"]
resource_name = "atk"
length = 0.1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_3j47b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qsl30"]
resource_name = "idle"
length = 0.32
loop_mode = 1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_rj4jd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_rj4jd"]
resource_name = "walk"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, -120), Vector2(-13, -130)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.124523]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_qsl30")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3j47b"]
_data = {
&"RESET": SubResource("Animation_3j47b"),
&"atk": SubResource("Animation_ou28q"),
&"idle": SubResource("Animation_qsl30"),
&"walk": SubResource("Animation_rj4jd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qsl30"]
radius = 277.016

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3j47b"]
size = Vector2(38, 20)

[sub_resource type="Animation" id="Animation_1rixm"]
resource_name = "atk_effect"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Light2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.75, 2.75), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_s5efl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Light2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s5efl"]
_data = {
&"RESET": SubResource("Animation_s5efl"),
&"atk_effect": SubResource("Animation_1rixm")
}

[sub_resource type="Animation" id="Animation_5cb24"]
resource_name = "respawn"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fail1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-666, 791), Vector2(555, 791), Vector2(555, 791), Vector2(-774, 791)]
}

[sub_resource type="Animation" id="Animation_4vbe1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fail1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-666, 791)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_itthc"]
_data = {
&"RESET": SubResource("Animation_4vbe1"),
&"respawn": SubResource("Animation_5cb24")
}

[node name="PlayerSing" instance=ExtResource("1_bjlvv")]
collision_mask = 4
script = ExtResource("2_ogifs")

[node name="Light2" type="Sprite2D" parent="." index="0"]
position = Vector2(-0.499992, -73)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("6_ou28q")

[node name="Sprite2D" parent="." index="1"]
position = Vector2(2, -119)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_qsl30")

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(-1, -10)
shape = SubResource("RectangleShape2D_ou28q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
&"": SubResource("AnimationLibrary_3j47b")
}

[node name="AreaDamage" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage" index="0"]
position = Vector2(0, -72)
shape = SubResource("CircleShape2D_qsl30")

[node name="TimerAtk" type="Timer" parent="." index="6"]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHurt" index="0"]
position = Vector2(-1, -10)
shape = SubResource("RectangleShape2D_3j47b")

[node name="PointLight2D2" type="PointLight2D" parent="." index="9"]
position = Vector2(0, -72)
scale = Vector2(2, 2)
energy = 0.5
texture = ExtResource("6_ou28q")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="." index="11"]
libraries = {
&"": SubResource("AnimationLibrary_s5efl")
}

[node name="CanvasLayer" type="CanvasLayer" parent="." index="12"]

[node name="Fail1" type="Sprite2D" parent="CanvasLayer" index="0"]
position = Vector2(-666, 791)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_1rixm")

[node name="AnimationPlayer3" type="AnimationPlayer" parent="." index="13"]
libraries = {
&"": SubResource("AnimationLibrary_itthc")
}

[connection signal="body_entered" from="AreaDamage" to="." method="_on_area_damage_body_entered"]
[connection signal="timeout" from="TimerAtk" to="." method="_on_timer_atk_timeout"]
